--- a/doc/strategies.tex
+++ b/doc/strategies.tex
@@ -54,6 +54,8 @@ that they set. Additionally, each strategy sets `path = 0',  `psize  =
 `mendelsohn'  (see~"option  mendelsohn"),   `lookahead'   (see~"option
 lookahead") and `compaction' (see~"option compaction"), respectively.
 
+Note: `pmode' was removed in ACE 4.
+
 % \begin{table}
 % \hrule
 % \caption{The Predefined Strategies}
