--- a/doc/moreexamples.tex
+++ b/doc/moreexamples.tex
@@ -391,7 +391,7 @@ gap> ACEParameters(1);
 rec( enumeration := "G", subgroup := "H", workspace := 1000000, 
   max := 249998, messages := 0, time := -1, hole := -1, loop := 0, asis := 0, 
   path := 0, row := 1, mendelsohn := 0, no := 0, lookahead := 0, 
-  compaction := 10, ct := 0, rt := 0, fill := 7, pmode := 3, psize := 256, 
+  compaction := 10, ct := 0, rt := 0, fill := 7, psize := 256, 
   dmode := 4, dsize := 1000 )
 
 \endexample
