--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -884,7 +884,7 @@ Standardisation Schemes").
 \>ACEPackageVersion() F
 
 gives the current version of the {\ACE} Package (i.e.~the {\GAP}  code
-component.
+component).
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
