--- a/doc/messages.tex
+++ b/doc/messages.tex
@@ -26,7 +26,7 @@ at `InfoACE' level 3. To see the  `Info'-ed  {\ACE}  output,  set  the
 `InfoLevel' of `InfoACE' to at least 3, e.g.
 
 \beginexample
-gap> SetInfoACELevel(3);
+gap> SetInfoLevel(InfoACE, 3);
 \endexample
 
 This  causes  each  line  of  {\ACE}  output  to  be  prepended   with
