--- a/doc/options.tex
+++ b/doc/options.tex
@@ -341,7 +341,7 @@ and the output from {\ACE}, which when {\ACE} is run non-interactively
 are stored in files whose full path names are recorded in  the  record
 fields   `ACEData.infile'   and    `ACEData.outfile',    respectively.
 Alternatively, both interactively and non-interactively  one  can  set
-the `InfoLevel' of `InfoACE' to 3 (see~"SetInfoACELevel"), to see  the
+the `InfoLevel' of `InfoACE' to 3 (see~"InfoACE"), to see  the
 output from {\ACE}, or to 4 to  also  see  the  commands  directed  to
 {\ACE}.
 
@@ -1271,7 +1271,7 @@ situation both interactively and   non-interactively  by  setting  the
 `InfoLevel' of `InfoACE' to 3 via
 
 \beginexample
-gap> SetInfoACELevel(3);
+gap> SetInfoLevel(InfoACE, 3);
 
 \endexample
 
